# ww_uhd

docs/: how-to-usrp.pptx  ~$how-to-usrp.pptx
fpga/usrp3/top/x300/: Makefile.x300.inc  usrp_load (1).sh  usrp_load.sh  vlsi_make (1).sh  vlsi_make.sh  x300.v  x300_core.v
fpga/usrp3/top/x300.1/: Makefile.x300.inc  mv_bitfile.sh  vlsi_make.sh  x300_core.v
host/: .gitignore  README.md
host/digital-loopback/: CMakeLists.txt  d_loopback-old (1).cpp  d_loopback.cpp
host/lib/usrp/x300/: x300_dac_ctrl.cpp  x300_mb_controller.cpp
host/osla-host/: CMakeLists.txt  README  cap_osla_host.sh  osla_host.cpp  rough_noise_plot.asv  rough_noise_plot.m  sample_analysis.m  sample_load_demo.m  stream_osla_host.sh
host/osla-host/interference/: .gitignore
host/osla-host/interference/GFSK_OLD/: BLE_Controller_Test.py  GFSK.grc  GFSK.py  GFSK_epy_block_0.py  GFSK_test.grc  GFSK_test.py  PNGen.grc  PNGen.py  PNGen_epy_block_0.py  RX_Log.grc  RX_Log.py  power_test.grc  power_test.py  power_test_epy_block_0.py  power_test_epy_block_1.py
host/osla-host/interference/estim/: interferer_chestim.cpp
host/osla-host/interference/gnuradio/embedded_python_blocks/: Interference_Controller.py  Log_Data.py  Normalizer.py
host/osla-host/interference/gnuradio/grc_graphs/: BLE_Interference.grc  File_Sink_Experiment.grc  File_Sink_Experiment.py  GFSK_Log_Arrival_test.grc  Normalizer_test.grc  Normalizer_test.py  Reciever.grc  Reciever.py  Single_Tone_Estimator.grc  Single_Tone_Estimator.py
host/osla-host/interference/matlab/BLEwaveform/: BLE_PSD.csv  BLE_analysis.m  BLEmodulate.m  Gaussian_Filter.m  gen_PSD.m
host/osla-host/interference/matlab/GRC_verification/: BLE_lab.m  plot_bin.m  plot_interarrival.m
host/osla-host/interference/matlab/channel_estimation/: channel_estimate.m  preamble.mem  simulate_channel_estimate.m
host/osla-host/logs/: tx-rx-gain-sweep.txt
host/osla-host/matlab/: plot_samp.m  rough_noise_plot.asv  sample_analysis.asv  sample_analysis.m
host/osla-host/src/estim/: CMakeLists.txt  ch_estim.test.cpp  estim.cpp  estim.h  preamble.mem  upsample.test.cpp  xcorr_slow.test.cpp  xcorr_slow.test.m
host/osla-host/src/mmio/: CMakeLists.txt  mmio.cpp  mmio.h  mmio.test.cpp  tx_amp.test.cpp
host/osla-host/src/tests/: mmio_test.cpp  sync_test.cpp
host/osla-host/src/xcorr_slow/: CMakeLists.txt  make_test.sh  test  xcorr_slow.cpp  xcorr_slow.h
host/osla-host/tests/: CMakeLists.txt  digital_loopback.cpp  dlb_prmbl_cap.cpp  dlb_prmbl_stream.cpp  dlb_test.cpp  fb_alb_cap.cpp  fb_alb_test.cpp  fwd_alb_cap.cpp  fwd_alb_debug.cpp  fwd_alb_prmbl_cap.cpp  fwd_alb_test.cpp  fwd_loopback.cpp  fwd_loopback_cap.cpp  lb_samps.mem  rss_estim.cpp  src_dest_estim.cpp  src_dest_lock_estim.cpp  src_dest_lock_test.cpp  src_dest_test.cpp  stream.cpp  threshold_ber_test.cpp
host/usrp_da/: CMakeLists.txt  usrp_da.cpp
info/: how-to-usrp.pptx
